--- a/style_three.css
+++ b/style_three.css
@@ -18,39 +18,46 @@
 
      max-width: 1200px;
      margin: 0 auto;
-     margin-top: 5%;
+     margin-top: 4%;
      height: 100%;
      color: white;
      display: block;
      box-sizing: border-box; /* The box border applies to the inside of the div and not to the outside */
      font-family: 'Pangram Woodland', serif;
-     background-image: url('./assets/images/candle.png');
+     background-image: url('./assets/images/r3.png');
   }
 
   p{
     font-family: 'Pangram Woodland', Times;
     font-size:24px;
   }
-  
-  button {
-    font-family : 'Pangram Fragment', Times;
-    font-style: italic;
-    color: white;
-}
 
 .container {
 	max-width: 600px;
-	margin: 0 auto;
-}
+	margin-left: 2%;
+    margin-top: 2%;
+}   
 
 button{
 	height: 40px;
+    width:70px;
+    font-family : 'Pangram Fragment', Times;
+    font-style: italic;
+    color: white;
 	vertical-align: middle;
+    border-radius: 15px;
 }
 
-#emoji {
-	font-size: 48px;
-}
+#backbtn {
+    background-color: #84b5ba;
+      margin:5%;
+      font-size: 24px;
+      border-radius: 20px;
+      position: absolute;
+      left: 50px;
+      bottom: 30px;
+      text-shadow: 1px 1px 0px black;
+  }
 
 form {
 	display:inline;
@@ -60,4 +67,6 @@ form {
 input[type="text"] {
 	height: 40px;
 	font-size:25px;
+    border-radius: 15px;
 }
+
