--- a/style.css
+++ b/style.css
@@ -58,6 +58,8 @@ button {
     font-family : 'Pangram Fragment', Times;
     font-style: italic;
     color: white;
+    border-radius: 15px;
+    background-color: #628494;
 }
 
 #burnbtn {
@@ -77,7 +79,7 @@ button {
     border-radius: 15px;
     position: absolute;
     left: 50px;
-    bottom: -65px;
+    bottom: 0%;
     text-shadow: 1px 1px 0px black;
 }
 
