--- a/style_three.css
+++ b/style_three.css
@@ -54,7 +54,7 @@ button{
       font-size: 24px;
       border-radius: 20px;
       position: absolute;
-      left: 130px;
+      left: 2%;
       text-shadow: 1px 1px 0px black;
   }
 
