--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ button {
     font-size: 24px;
     border-radius: 15px;
     position: absolute;
-    left: 100px;
+    left: 2%;
     text-shadow: 1px 1px 0px black;
 }
 
